# pong

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: staticShader.fragment
engine/: CMakeLists.txt  Doxyfile
engine/include/: CMakeLists.txt  application.hpp  camera.hpp  entity.hpp  gameengine.hpp  model.hpp  renderer.hpp  resourcemanager.hpp  shaderprogram.hpp  window.hpp
engine/src/: CMakeLists.txt  application.cpp  camera.cpp  entity.cpp  model.cpp  renderer.cpp  resourcemanager.cpp  shaderprogram.cpp  window.cpp
game/: CMakeLists.txt
game/assets/: staticShader.vertex
game/src/: CMakeLists.txt  main.cpp  pongapp.cpp  pongapp.hpp  staticrenderer.cpp  staticrenderer.hpp  staticshader.cpp  staticshader.hpp
